--- a/tuwaiq-academy/tuwaiq-academy/ar.lproj/LaunchScreen.strings
+++ b/tuwaiq-academy/tuwaiq-academy/ar.lproj/LaunchScreen.strings
@@ -1,1 +1,13 @@
-
+"Email" =  "الإيميل";
+"Password" =  "كلمة المرور";
+"confirmPassword" =  "تأكيد كلمة المرور";
+"Signin" =  "تسجيل الدخول";
+"Register" =  "تسجيل حساب جديد";
+"name" =  "اسم المستخدم";
+"email" =  "الإيميل";
+"Password" =  "كلمة المرور";
+"confirmPassword" =  "تأكيد كلمة المرور";
+"Register" =  "تسجيل حساب جديد";
+"Signin" =  "تسجيل الدخول";
+"Logout" =  "تسجيل االخروج";
+٧
