--- a/tuwaiq-academy/tuwaiq-academy/Controller/ar.lproj/Localizable.strings
+++ b/tuwaiq-academy/tuwaiq-academy/Controller/ar.lproj/Localizable.strings
@@ -1,4 +1,10 @@
+/* 
+  Localizable.strings
+  tuwaiq-academy
 
+  Created by Afrah Omar on 30/05/1443 AH.
+  
+*/
 "Email" =  "الإيميل";
 "Password" =  "كلمة المرور";
 "confirmPassword" =  "تأكيد كلمة المرور";
