--- a/tuwaiq-academy/tuwaiq-academy/ar.lproj/LaunchScreen.strings
+++ b/tuwaiq-academy/tuwaiq-academy/ar.lproj/LaunchScreen.strings
@@ -11,4 +11,5 @@
 "Register" =  "تسجيل حساب جديد";
 "Signin" =  "تسجيل الدخول";
 "Logout" =  "تسجيل االخروج";
-
+"thebath" = "المسار";
+"description" = "الوصف";
