--- a/tuwaiq-academy/tuwaiq-academy/Controller/ar.lproj/Localizable.strings
+++ b/tuwaiq-academy/tuwaiq-academy/Controller/ar.lproj/Localizable.strings
@@ -17,9 +17,22 @@
 "Register" =  "تسجيل حساب جديد";
 "Signin" =  "تسجيل الدخول";
 "Logout" =  "تسجيل االخروج";
-
 "TheBath" = "المسار";
 "description" = "الوصف";
 "Update Post" = "تحديث" ;
 "Add Post" = "اضافه" ;
-"Afrah" = "افراح" ;
+"aca" = "اكاديمية بالشراكة بين أبل و أكاديمية طويق لتقديم الأدوات والتدريب لرواد الأعمال والمطورين والمصممين الطموحين لخلق شركات ناشئة ووظائف في مجال تطبيقات الـ iOS بغض النظر عن خلفياتهم العلمية أو التقنية
+التسجيل
+";
+"ac" = "أكاديمية أبل";
+"g1000" = "إطـلاق أكـبر معسـكر تـدريبي حضـوري مـن نوعـه عالمياً منتهي بالتوظيف وذلك لتدريب 1000 شاب وشـابة في 13 منطقـة - في نفـس الوقـت - في المملكــة بالشراكة مــع وزارة الاتصــالات وتقنيــة المعلومات";
+"h1000" = "طويق 1000";
+"str1" = "إطــلاق اكــبر منصــة لتعلــيم البرمجــة والتقنيــات الحديثـة باللغـة العربيـة تضـم عـدد مـن الـدورات والمسارات والمشاريع التطبيقيـة حيـث شـارك 50 الف سعودي/ـة بالمرحلة التجريبية";
+"str2" = "سَطر";
+"co1" = "إطـلاق أول منصـة عربيـة متخصصـة في التحـديات البرمجيـة تهـدف إلى تشـجيع المبرمجـﻴﻦ لتطـوير مستوياتهم في البرمجة ووضـع ترتيـب وأوسـمة لأبرز المبرمجين في مختلف اللغات";
+"co2" = "كودر هب";
+"ac2" = "تقدم أكاديمية طويق عدد من المعسكرات البرمجية والدورات المكثفة والقصيرة بالإضافة إلى إطلاقها لمنصة سطر التعليمية لتكون أول منصة عربية متخصصة في مجالات التقنية الحديثة باللغة العربية.";
+"ac3" = "أكاديمة طويق";
+"g2" = "Google";
+"g3" = "ستقدم اكاديمية طويق بالشراكه مع google معسكرات تدريبيه في التقنيه كجزء من مبادرات طويق ١٠٠٠ للمعسكرات.";
+"label" = " ليس لديك حساب؟";
