--- a/tuwaiq-academy/tuwaiq-academy/Controller/en.lproj/Localizable.strings
+++ b/tuwaiq-academy/tuwaiq-academy/Controller/en.lproj/Localizable.strings
@@ -5,3 +5,16 @@
   Created by Afrah Omar on 30/05/1443 AH.
   
 */
+"aca" = "A partnership between Apple and Tuwaiq Academy to provide aspiring entrepreneurs, developers and designers with the tools and training to help them launch startups and find and create jobs in the iOS app economy, regardless of their scientific or technical background";
+"ac" = "Apple Academy";
+"g1000" = "The largest training camp of its kind in the world ending in employment, to simultaneously train 1,000 young men and women across 13 regions in the Kingdom, in partnership with the Ministry of Communications and Information Technology.";
+"h1000" = "Tuwaiq 1000";
+"str1" = "The largest Arabic platform for teaching programming and modern technologies. Includes several courses, pathways and applied projects, with 50,000 Saudis participating in the pilot phase.";
+"str2" = "SATR";
+"co1" = "The first Arab platform specialized in programming challenges to encourage programmers develop their skills, together with rankings and honors to recognize top coders in various programming languages.";
+"co2" = "CoderHub";
+"ac2" = "Tuwaiq Academy offers several programming camps as well as intensive and short courses, in addition to the SATR educational platform, which is the first Arab platform specialized in teaching modern technologies in the Arabic language.";
+"ac3" = "Tuwaiq Academy";
+"g2" = "Tuwaiq Academy in partnership with Google will deliver training courses as part of the Tuwaiq 1000 Bootcamp initiative.";
+"g3" = "Google";
+"label" = "You don't have an account";
