--- a/tuwaiq-academy/tuwaiq-academy/Controller/ar.lproj/Localizable.strings
+++ b/tuwaiq-academy/tuwaiq-academy/Controller/ar.lproj/Localizable.strings
@@ -5,22 +5,17 @@
   Created by Afrah Omar on 30/05/1443 AH.
   
 */
-"Email" =  "الإيميل";
-"Password" =  "كلمة المرور";
-"confirmPassword" =  "تأكيد كلمة المرور";
-"Signin" =  "تسجيل الدخول";
-"Register" =  "تسجيل حساب جديد";
-"name" =  "اسم المستخدم";
-"email" =  "الإيميل";
-"Password" =  "كلمة المرور";
-"confirmPassword" =  "تأكيد كلمة المرور";
-"Register" =  "تسجيل حساب جديد";
-"Signin" =  "تسجيل الدخول";
+"Email:" =  "الإيميل";
+"Sign in" =  "تسجيل الدخول";
+"Register" =  "إنشاء حساب";
+"Name:" =  "إسم المستخدم";
+"Password:" =  "كلمة المرور";
+"Confirm Password:" =  "تأكيد كلمة المرور";
 "Logout" =  "تسجيل االخروج";
-"TheBath" = "المسار";
-"description" = "الوصف";
+"The bath programming language" = "مسار اللغة البرمجية";
+"Description" = "الوصف";
 "Update Post" = "تحديث" ;
-"Add Post" = "اضافه" ;
+"Add Post" = "اضافة" ;
 "aca" = "اكاديمية بالشراكة بين أبل و أكاديمية طويق لتقديم الأدوات والتدريب لرواد الأعمال والمطورين والمصممين الطموحين لخلق شركات ناشئة ووظائف في مجال تطبيقات الـ iOS بغض النظر عن خلفياتهم العلمية أو التقنية
 التسجيل
 ";
