--- a/tuwaiq-academy/tuwaiq-academy/Controller/ar.lproj/Localizable.strings
+++ b/tuwaiq-academy/tuwaiq-academy/Controller/ar.lproj/Localizable.strings
@@ -31,3 +31,25 @@
 "g2" = "Google";
 "g3" = "ستقدم اكاديمية طويق بالشراكه مع google معسكرات تدريبيه في التقنيه كجزء من مبادرات طويق ١٠٠٠ للمعسكرات.";
 "label" = " ليس لديك حساب؟";
+"swift" = "يمكنك معسكر swift من بناء تطبيقات iOS والقدرة على تطوير ونشر تطبيقات الموبايل على متجر تطبيقات Apple
+التقنيات المستخدمة: Swift, Swift UI, Firebase";
+"swift1" = "معسكر Swift";
+"java" = "يمكنك المعسكر من تصميم وبناء تطبيقات الويب المتكاملة باستخدام جافا";
+"java1|" = "معسكر Java";
+"kot" = "يمكنك معسكر Kotlin المكثف من بناء و نشر تطبيقات الجوال على متجر تطبيقات Android
+التقنيات المستخدمة: Kotlin, SQLite, Room, JUnit, Mockito";
+"kot1" = "معسكر Kotlin";
+"py" = "كورس بايثون لمدة 12 اسبوع المكثف هو تجربة فريدة من نوعها تقدم لك خبرة متعمقة في بناء واختبار تطبيقات الويب";
+"py1" = "معسكر Python";
+"js" = "يمكنك المعسكر من تصميم وبناء تطبيقات الويب المتكاملة باستخدام JavaScript ، React ، Node لكل من Front-end و Back-end
+التقنيات المستخدمة: HTML, CSS, Javascript, React, NodeJS, ExpressJS, MongoDB, Mongoose, Jest";
+"js1" = "معسكر JavaScript";
+"c" = "يمكنك المعسكر من تصميم وبناء تطبيقات الويب المتكاملة باستخدام #C";
+"c1" = "معسكر #C";
+"You Password" = "كلمة المرور";
+"Your email address" = "البريد الإلكتروني";
+"Please enter your name" = "من فضلك ادخل اسمك";
+"Confirm Password" = "تأكيد كلمة المرور";
+"You have an account?" = "لديك حساب";
+"You don't have an account?" = "ليس لديك حساب";
+
