--- a/tuwaiq-academy/tuwaiq-academy/Controller/ar.lproj/Localizable.strings
+++ b/tuwaiq-academy/tuwaiq-academy/Controller/ar.lproj/Localizable.strings
@@ -52,4 +52,5 @@
 "Confirm Password" = "تأكيد كلمة المرور";
 "You have an account?" = "لديك حساب";
 "You don't have an account?" = "ليس لديك حساب";
+"Logout" = "تسجيل الخروج";
 
